--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,10 @@ p {
   text-align: center;
 }
 
+label {
+  font-size: 20px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -43,4 +47,8 @@ button {
   .card-name {
     background-color: rgba(255, 255, 255, 0.458);
   }
+}
+
+.invalid-field {
+  background-color: red;
 }
